infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthcare-api
  namespace: default
spec:
  selector:
    app: healthcare-api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
